# kbest

./: .gitignore  README.md
doc/: doxigen.config
doc/report/: biblio.bib  report.tex
doc/report/data/: instances.lst.solved
kbest/: CMakeLists.txt  kbest.py  plots.R  problemlist.py  solve.sh  solve_problem_list.bat  solve_problem_list.sh
kbest/problems/: problemlist.py  simple.txt
kbest/src/: CMakeLists.txt
kbest/src/generator/: CMakeLists.txt  generator.cpp
kbest/src/solver/: CMakeLists.txt  KBest.cpp  KBest.h  KBest_cli.cpp  Matrix.cpp  Matrix.h  Problem.cpp  Problem.h  Solution.cpp  Solution.h  Time.h
